# drone_face-recognition

./: .gitignore  ENVIRONMENT_SETUP_COMPLETE.md  FILES_FOR_GITHUB.md  GETTING_STARTED.md  GITHUB_UPLOAD_SUMMARY.md  LICENSE  QUICKSTART.md  README.md  build_embedding_database.py  config.yaml  dataset_capture.py  main.py  main_backup.py  pyproject.toml  requirements.txt  sensitivity_analysis_output.txt  setup.py  setup_environment.ps1
database/embeddings/baso/: emb_0001.npy  emb_0002.npy  emb_0003.npy  emb_0004.npy  emb_0005.npy  emb_0006.npy  emb_0007.npy  emb_0008.npy  emb_0009.npy  emb_0010.npy  emb_0011.npy  emb_0012.npy  emb_0013.npy  emb_0014.npy  emb_0015.npy  emb_0016.npy  emb_0017.npy  emb_0018.npy  emb_0019.npy  emb_0020.npy  emb_0021.npy  emb_0022.npy  emb_0023.npy  emb_0024.npy  emb_0025.npy  emb_0026.npy  emb_0027.npy  emb_0028.npy  emb_0029.npy  (+268 more)
docs/: 01_PROJECT_CONTEXT.md  02_SYSTEM_DESIGN.md  03_DEVELOPMENT_GUIDE.md  04_STATISTICAL_ANALYSIS.md  05_THRESHOLD_SENSITIVITY_ANALYSIS.md  06_PHASE3_INTEGRATION.md  07_PIPELINE_INSTRUMENTATION.md  08_AUTOMATED_ENROLLMENT_COMPLETE.md  09_INSTRUMENTATION_FIX.md  10_FEATURE_FREEZE_FINAL.md  enrollment_quickstart.md
scripts/: setup.ps1
src/: utils.py
src/camera/: __init__.py  rtsp_camera.py  video_camera.py  webcam_camera.py
src/database/: __init__.py  database.py
src/dataset/: __init__.py  utils.py
src/enrollment/: __init__.py  engine.py  frame_validator.py  video_sampler.py
src/recognition/: __init__.py  recognizer.py
src/spoof/: __init__.py  antispoof.py
src/ui/: display.py
tools/: analyze_enrollment.py  enroll_image.py  enroll_video.py  performance_comparison.py  threshold_sensitivity_analysis.py
(+976 files in other folders)
